$Id: CHANGES,v 1.118 2001/06/18 11:07:45 stelian Exp $

Changes between versions 0.4b22 and 0.4b23 (released ????????????)
==================================================================

1.	Fixed a buffer overflow in restore/tape.c. Patch provided by
	Marcus Meissner (Caldera International Security Dept.).

2.	Implement the Sun rmt extended protocol. Patch submitted
	by Ian Gordon <iangordon@users.sourceforge.net>.

3.	Check for the e2fsprogs header <ext2fs/ext2_fs.h> instead of 
	the linux kernel header. This ensures that dump always has the
	latest version of this file. Patch submitted by
	Andreas Dilger <adilger@turbolinux.com>.

4.	Report any filesystem present in either /etc/fstab with a 
	positive passno or /etc/dumpdates in dump -w output.
	Patch submitted by Andreas Dilger <adilger@turbolinux.com>.

Changes between versions 0.4b21 and 0.4b22 (released May 12, 2001)
==================================================================

1.	Made dump report the number of blocks dumped per volume.
	Thanks to Kenneth Porter <shiva@well.com> for the suggestion.

2.	Fix a bug in dump where waiting too much at the 'change volumes'
	question caused the volume to be rewritten. Thanks to
	Graham Reed <greed@users.sourceforge.net> for reporting the
	bug and providing a patch.

3.	Added a compression option to dump, contributed by Jerry
	Peters <gapeters@worldnet.att.net>.

	WARNING: the compression works only on files/pipes and 
	drives supporting variable block size.

	WARNING2: tapes created using the compression feature are
	incompatible with the standard dump tape format, and a
	version of restore >= 0.4b22 will be needed for extraction.

4.	Fixed some compilation problems for glibc 2.2.2 and 64 bit 
	architectures. Thanks to Paul Slootman <paul@debian.org> for
	the patch and to Bdale Garbee <bdale@gag.com> for forwarding
	it upstream.

5.	Many cleanups (CPP defines, const char warnings, check of
	ext2fs COMPAT flags, time_t cleanups, added libext2 version